--- a/src/css/styles-dark-mode.css
+++ b/src/css/styles-dark-mode.css
@@ -59,8 +59,8 @@ select{
 }
 
 .vertical-space {
-    padding-bottom: .5rem;
-    padding-top: .5rem;
+    padding-bottom: .75rem;
+    padding-top: .75rem;
     background-color: var(--bg_body-dark-mode);
 }
 
@@ -80,7 +80,7 @@ select{
 .web-title h1{
     color: var(--brand-primary);
     font-size: 1.2rem;
-
+    font-weight: lighter;
 }
 
 .web-controls-mobile {
@@ -156,15 +156,19 @@ select{
 
 
 
-.search-box form {
+.search-fields {
     background-color: var(--bg_body-dark-mode);
     padding-right: 1rem;
     padding-bottom: 1rem;
     padding-top: 1rem;
 }
 
+.search-box-mobile form {
+    padding-right: 1rem;
+    padding-top: 1rem;
+}
 
-.search-box button {
+.search-box-mobile button {
 
     font-size: 3rem;
     height: 2.15rem;
@@ -173,7 +177,7 @@ select{
     border-right: none;
 }
 
-.search-box button:active {
+.search-box-mobile button:active {
     background-color: var(--brand-primary);
     color: var(--bg_default);
 }
@@ -187,7 +191,7 @@ select{
     width: 90%;
 }
 
-.search-box input::placeholder {
+.search-box-mobile input::placeholder {
     font-size: .8rem;
     text-align: left;
 }
@@ -213,8 +217,13 @@ select{
 }
 
 .number-of-results {
+    padding-top: 1rem;
     margin: 0 0 1rem 1rem;
     color: var(--body-text-drak-mode);
+}
+
+.search-box {
+    display: none;
 }
 
 .search-results-cards {
@@ -251,6 +260,12 @@ select{
     font-size: .8rem;
     color: var(--body-text-drak-mode);
     margin-left: 1rem;
+    font-weight: lighter;
+}
+
+.card-info {
+    display: flex;
+    flex-direction: column;
 }
 
 .language-name {
@@ -258,7 +273,7 @@ select{
     color: var(--body-text-drak-mode);
     font-weight: bold;
     margin-left: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.2rem;
 }
 
 .rating-stars {
@@ -270,26 +285,378 @@ select{
 .author {
     color: #848484;
     padding: 1rem;
-    font-size: .7rem;
-    margin-bottom: 1rem;
+    margin-left: 1rem;
+    margin-bottom: .7rem;
 }
 
 
-/* Small tablets and devices between 321px and 768px wide styles */
+/* Small tablets and devices between 481 and 768px wide styles */
 @media screen and (min-width: 481px) and (max-width: 768px) {
+
+
+    .button {
+        font-size: .7rem;
+        border-radius: .4rem;
+        width: 7rem;
+    }
+
+    .web-controls-mobile {
+        display: none;
+    }
+
+    .web-controls {
+        display: flex;
+        flex-direction: row;
+        gap: 0.3rem;
+        height: 1.8rem;
+    }
+    .welcome-title {
+        align-items: center;
+    }
+
+    .search-box-mobile {
+        display: none;
+    }
+
+    .search-box {
+        display: initial;
+    }
+
+    .search-box form {
+        padding-top: 1rem;
+        display: flex;
+        align-items: center;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
+    .search-box button {
+        font-size: 3rem;
+        height: 3rem;
+        padding: 0 0 0 0.3rem;
+        border-radius: 0.3rem 0 0 0;
+        border-right: none;
+    }
+
+    .search-box .search-dropdown-list {
+        width: 15%;
+        height: 3rem;
+        font-weight: lighter;
+    }
+
+    .search-box input {
+        height: 2.9rem;
+        background-color: var(--bg_default-dark-mode);
+        border: 1px solid var(--lines-color-dark-mode);
+        border-left: none;
+        width: 90%;
+    }
+
+    .search-results-cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        row-gap: 1rem;
+        margin: 0;
+        padding-left: 1rem;
+    }
+
+    .course-card {
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+    }
+    .course-image-container {
+        height: 50%;
+    }
+
+    .course-image {
+        width: 100%;
+        max-height: 50%;
+        max-width: 30rem;
+    }
+
+    .card-info {
+        height: 8rem;
+    }
+
+    .author {
+        font-size: .9rem;
+    }
 }
+
 
 
 /* Laptop and devices between 769px and 1200px wide styles */
 @media screen and (min-width: 769px) and (max-width: 1024px) {
+    .button {
+        font-size: .7rem;
+        border-radius: .4rem;
+        width: 7rem;
+    }
+
+    .web-controls-mobile {
+        display: none;
+    }
+
+    .web-controls {
+        display: flex;
+        flex-direction: row;
+        gap: 0.3rem;
+        height: 1.8rem;
+    }
+
+    .search-field input {
+        width: 100%;
+    }
+
+    .welcome-title {
+        align-items: center;
+    }
+
+    .search-box-mobile {
+        display: none;
+    }
+
+    .search-box {
+        display: initial;
+    }
+
+    .search-box form {
+        padding-top: 1rem;
+        display: flex;
+        align-items: center;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
+    .search-box button {
+        font-size: 3rem;
+        height: 3rem;
+        padding: 0 0 0 0.3rem;
+        border-radius: 0.3rem 0 0 0;
+        border-right: none;
+    }
+
+    .search-box .search-dropdown-list {
+        width: 15%;
+        height: 3rem;
+        font-weight: lighter;
+    }
+
+    .search-box input {
+        height: 2.9rem;
+        background-color: var(--bg_default-dark-mode);
+        border: 1px solid var(--lines-color-dark-mode);
+        border-left: none;
+        width: 90%;
+    }
+
+    .search-results-cards {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        row-gap: 1rem;
+        margin: 0;
+        padding-left: 1rem;
+    }
+    .course-card {
+        width: 45%;
+    }
+
+    .course-card:nth-child(n) {
+        margin-bottom: 1rem;
+    }
+
+    .course-image-container {
+        height: 50%;
+    }
 }
 
 
 /* Desktop and devices wider than 1200px styles */
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
+
+    .button {
+        font-size: .7rem;
+        border-radius: .4rem;
+        width: 7rem;
+    }
+
+    .web-controls-mobile {
+        display: none;
+    }
+
+    .web-controls {
+        display: flex;
+        flex-direction: row;
+        gap: 0.3rem;
+        height: 1.8rem;
+    }
+
+    .welcome-title {
+        align-items: center;
+    }
+
+    .welcome-title p {
+        padding-left: 10rem;
+    }
+
+    .search-box-mobile {
+        display: none;
+    }
+
+    .search-box {
+        display: initial;
+    }
+
+    .search-box form {
+        padding-top: 1rem;
+        display: flex;
+        align-items: center;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
+    .search-box button {
+        font-size: 3rem;
+        height: 3rem;
+        padding: 0 0 0 0.3rem;
+        border-radius: 0.3rem 0 0 0;
+        border-right: none;
+    }
+
+    .search-box .search-dropdown-list {
+        width: 15%;
+        height: 3rem;
+        font-weight: lighter;
+    }
+
+    .search-box input {
+        height: 2.9rem;
+        background-color: var(--bg_default-dark-mode);
+        border: 1px solid var(--lines-color-dark-mode);
+        border-left: none;
+        width: 90%;
+    }
+
+    .search-field input {
+        width: 100%;
+    }
+
+    .search-results-cards {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        row-gap: 1rem;
+        margin: 0;
+        padding-left: 1rem;
+    }
+
+    .course-card {
+        max-width: 25%;
+        height: 254px;
+        margin-left: 1rem;
+    }
+
+    .course-card:nth-child(n) {
+        margin-bottom: .5rem;
+    }
 }
 
 /* Extra Large Screens */
 @media screen and (min-width: 1201px)  {
+
+    .button {
+        font-size: .7rem;
+        border-radius: .4rem;
+        width: 7rem;
+    }
+
+    .web-controls-mobile {
+        display: none;
+    }
+
+    .web-controls {
+        display: flex;
+        flex-direction: row;
+        gap: 0.3rem;
+        height: 1.8rem;
+    }
+
+    .welcome-title {
+        align-items: center;
+    }
+
+    .welcome-title p {
+        padding-left: 10rem;
+    }
+
+    .search-box-mobile {
+        display: none;
+    }
+
+    .search-box {
+        display: initial;
+    }
+
+    .search-box form {
+        padding-top: 1rem;
+        display: flex;
+        align-items: center;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
+    .search-box button {
+        font-size: 3rem;
+        height: 3rem;
+        padding: 0 0 0 0.3rem;
+        border-radius: 0.3rem 0 0 0;
+        border-right: none;
+    }
+
+    .search-box .search-dropdown-list {
+        width: 15%;
+        height: 3rem;
+        font-weight: lighter;
+    }
+
+    .search-box input {
+        height: 2.9rem;
+        background-color: var(--bg_default-dark-mode);
+        border: 1px solid var(--lines-color-dark-mode);
+        border-left: none;
+        width: 90%;
+    }
+
+    .search-field input {
+        width: 100%;
+    }
+
+    .search-results-cards {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        row-gap: 1rem;
+        margin: 0;
+        padding-left: 1rem;
+    }
+
+    .course-card {
+        max-width: 20%;
+        height: 254px;
+        margin-left: 1rem;
+    }
+
+    .course-card:nth-child(n) {
+        margin-bottom: .5rem;
+    }
+
 }
 
