--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,17 +66,13 @@ select{
 .header {
     padding: 1.5rem 1rem 1.5rem 1rem;
     background-color: var(--bg_default);
-}
-
-.header-content {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
 }
 
-.web-title h1{
+.header h1{
     color: var(--brand-primary);
     font-size: 1.2rem;
     font-weight: lighter;
@@ -131,7 +127,7 @@ select{
     background-color: var(--bg_default);
 }
 
-.welcome-title h1 {
+.welcome-title h2 {
     color: var(--brand-secondary);
 }
 
@@ -229,6 +225,7 @@ select{
 .course-card{
     background-color: var(--bg_default);
     border-radius: 0.5rem;
+    height: auto;
 }
 .course-image-container {
     display: flex;
@@ -237,14 +234,13 @@ select{
     width: 100%;
     height: 15vh;
     overflow: hidden;
-    margin-bottom: 1rem;
     border-radius: .5rem .5rem 0  0 ;
     background-color: var(--bg_default);
 }
 
 .course-image {
     width: 100%;
-    height: 22vh;
+    height: auto;
 }
 
 .course-title {
@@ -256,6 +252,7 @@ select{
 
 .card-info {
     display: flex;
+    padding-top: 1rem;
     flex-direction: column;
 }
 .language-name {
@@ -357,13 +354,12 @@ select{
         width: 80vw;
     }
     .course-image-container {
-        height: 50%;
+        height: 25vh;
     }
 
     .course-image {
         width: 100%;
-        max-height: 50%;
-        max-width: 30rem;
+        height: auto;
     }
 
     .card-info {
