--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -12,5 +12,5 @@
     --bg_body-dark-mode: #282828;
     --lines-color-dark-mode: #000000;
     --body-text-drak-mode: #EDEDED;
-    --heart-color-dark-mode: #DC143C
+    --heart-color-dark-mode: #DC143C;
 }
