--- a/css/styles.css
+++ b/css/styles.css
@@ -45,13 +45,13 @@ body {
 }
 
 .p {
-    font-size: 1rem;
+    font-size: var(--md);
 }
 
 /* mobile styles up to 320px - 480px*/
 
 .button{
-    font-size: 1rem;
+    font-size: var(--md);
     display: flex;
     align-items: center;
     padding: .6rem;
@@ -60,29 +60,29 @@ body {
     border-radius: .25rem;
     color: var(--body-text-var);
     width: 2.5rem;
+    cursor: pointer;
 }
 
 label{
-    font-size: .7rem;
+    font-size: var(--sm);
     color: var(--body-text-var);
     border: 1px solid var(--lines-color-var);
     border-bottom: none;
     padding: .4rem 0 0 1rem;
     background-color: var(--background-default);
+    white-space: nowrap;
 }
 
 select{
-    font-size: .9rem;
+    font-size: calc(.9 * var(--md));
     color: var(--body-text-var);
     border: 1px solid var(--lines-color-var);
     border-top: none;
-    padding: 0 0 .5rem .8rem;
+    padding: 0 0 .5rem .2rem;
     background-color: var(--background-default);
+
 }
 
-.select option {
-    font-size: 3rem;
-}
 
 .vertical-space {
     padding-bottom: .75rem;
@@ -90,7 +90,7 @@ select{
     background-color: var(--background-body);;
 }
 
-.header {
+.first-part {
     padding: 1.5rem 1rem 1.5rem 1rem;
     background-color: var(--background-default);
     display: flex;
@@ -99,10 +99,10 @@ select{
     align-items: center;
 }
 
-.header h1{
+.first-part h1{
     color: var(--brand-primary-color);
-    font-size: 1.2rem;
-    font-weight: lighter;
+    font-size: var(--lg);
+    font-weight: var(--font-weight-light);
 }
 
 .web-controls-mobile {
@@ -127,17 +127,24 @@ select{
 
 .top-page-design {
     display: flex;
-    flex-direction: row;
-    overflow: hidden;
-    background: linear-gradient(to right, var(--brand-primary-color), var(--brand-secondry-color))
+    justify-content: space-between;
+    background-color: var(--background-default);
 }
-.left-triangle {
-    width: 0;
-    height: 0;
-    border-left: 50vw solid transparent;
-    border-right: 50vw solid transparent;
-    border-bottom: 2vh solid var(--background-default);
-    padding-bottom: 2vh;
+
+.triangle {
+    width: 100%;
+    height: 70px;
+    background: linear-gradient(to right, #066caa 0%, #04849d 20%, #03a08d 100%);
+    clip-path: polygon(0 0, 0% 100%, 110% 0);
+    position: absolute;
+    z-index: 1;
+}
+.triangle-2 {
+    width: 100%;
+    height: 70px;
+    background-color: var(--brand-secondry-color);
+    clip-path: polygon(0 0, 100% 100%, 120% 0);
+    z-index: 0;
 }
 
 .welcome-title {
@@ -153,7 +160,7 @@ select{
 
 .welcome-title p {
     color: var(--body-text-var);
-    font-size: .8rem;
+    font-size: calc(1.1 * var(--sm));
     text-align: left;
 
 }
@@ -180,8 +187,6 @@ select{
 
 .search-box-mobile button {
 
-    font-size: 3rem;
-    height: 2.15rem;
     padding: 0 0 0 .3rem;
     border-radius: .3rem 0 0 0;
     border-right: none;
@@ -204,7 +209,7 @@ select{
 }
 
 .search-box-mobile input::placeholder {
-    font-size: .8rem;
+    font-size: calc(1.1 * var(--sm));
     text-align: left;
 }
 
@@ -247,6 +252,7 @@ select{
     background-color: var(--background-default);
     border-radius: 0.5rem;
     height: auto;
+    cursor: pointer;
 }
 .course-image-container {
     display: flex;
@@ -265,10 +271,10 @@ select{
 }
 
 .course-title {
-    font-size: .8rem;
+    font-size: calc(1.1 * var(--sm));
     color: var(--body-text-var);
     margin-left: 16px;
-    font-weight: lighter;
+    font-weight: var(--font-weight-light);
 }
 
 .card-info {
@@ -277,9 +283,9 @@ select{
     flex-direction: column;
 }
 .language-name {
-    font-size: .8rem;
+    font-size: calc(1.1 * var(--sm));
     color: var(--body-text-var);
-    font-weight: bold;
+    font-weight: var(--font-weight-bold);
     margin-left: 16px;
     margin-bottom: 19px;
 }
@@ -291,17 +297,22 @@ select{
 
 .author {
     color: #848484;
-    font-size: .7rem;
+    font-size: var(--sm);
     margin-left: 16px;
     margin-bottom: 11px;
 }
 
+.copyrights {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    text-align: center;
+}
 
 /* Small tablets and devices between 481 and 768px wide styles */
 @media screen and (min-width: 481px) and (max-width: 768px) {
 
     .button {
-        font-size: .7rem;
+        font-size: var(--sm);
         border-radius: .4rem;
         width: 7rem;
     }
@@ -337,17 +348,19 @@ select{
     }
 
     .search-box button {
-        font-size: 3rem;
-        height: 3rem;
-        padding: 0 0 0 0.3rem;
-        border-radius: 0.3rem 0 0 0;
+        height: 3.05rem;
+        padding: 0 0 0 0.8rem;
         border-right: none;
     }
 
     .search-box .search-dropdown-list {
-        width: 15%;
+        width: 22%;
         height: 3rem;
-        font-weight: lighter;
+        font-weight: var(--font-weight-light);
+    }
+
+    .search-dropdown-list:last-child label {
+        border-top-right-radius: .3rem;
     }
 
     .search-box input {
@@ -355,7 +368,7 @@ select{
         background-color: var(--background-default);
         border: 1px solid var(--lines-color-var);
         border-left: none;
-        width: 90%;
+        width: 60%;
     }
 
     .search-results-cards {
@@ -388,7 +401,7 @@ select{
     }
 
     .author {
-        font-size: .9rem;
+        font-size: calc(.9 * var(--md));
     }
 }
 
@@ -397,7 +410,7 @@ select{
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
     .button {
-        font-size: .7rem;
+        font-size: var(--sm);
         border-radius: .4rem;
         width: 7rem;
     }
@@ -438,9 +451,8 @@ select{
     }
 
     .search-box button {
-        font-size: 3rem;
-        height: 3rem;
-        padding: 0 0 0 0.3rem;
+        height: 3.05rem;
+        padding: 0 0 0 0.8rem;
         border-radius: 0.3rem 0 0 0;
         border-right: none;
     }
@@ -448,7 +460,11 @@ select{
     .search-box .search-dropdown-list {
         width: 15%;
         height: 3rem;
-        font-weight: lighter;
+        font-weight: var(--font-weight-light);
+    }
+
+    .search-dropdown-list:last-child label {
+        border-top-right-radius: .3rem;
     }
 
     .search-box input {
@@ -461,8 +477,8 @@ select{
 
     .search-results-cards {
         display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        justify-content: space-between;
+        align-items: flex-start;
         flex-wrap: wrap;
         row-gap: 1rem;
         margin: 0;
@@ -487,7 +503,7 @@ select{
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
 
     .button {
-        font-size: .7rem;
+        font-size: var(--sm);
         border-radius: .4rem;
         width: 7rem;
     }
@@ -528,9 +544,8 @@ select{
     }
 
     .search-box button {
-        font-size: 3rem;
-        height: 3rem;
-        padding: 0 0 0 0.3rem;
+        height: 3.05rem;
+        padding: 0 0 0 0.8rem;
         border-radius: 0.3rem 0 0 0;
         border-right: none;
     }
@@ -538,7 +553,11 @@ select{
     .search-box .search-dropdown-list {
         width: 15%;
         height: 3rem;
-        font-weight: lighter;
+        font-weight: var(--font-weight-light);
+    }
+
+    .search-dropdown-list:last-child label {
+        border-top-right-radius: .3rem;
     }
 
     .search-box input {
@@ -553,24 +572,35 @@ select{
         width: 100%;
     }
 
+    .number-of-results {
+        font-size: var(--lg);
+    }
+
     .search-results-cards {
         display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        justify-content: flex-start;
         flex-wrap: wrap;
-        row-gap: 1rem;
-        margin: 0;
-        padding-left: 1rem;
+        gap: 11px;
+    }
+
+    .search-results-cards::before {
+        content: "";
+        align-self: flex-start;
     }
 
     .course-card {
-        max-width: 25%;
+        width: calc(25% - 20px);
         height: 254px;
-        margin-left: 16px;
     }
 
     .course-card:nth-child(n) {
         margin-bottom: 8px;
+    }
+
+    .course-image {
+        width: 120%;
+        height: 100%;
+        object-fit: cover;
     }
 
 }
@@ -579,7 +609,7 @@ select{
 @media screen and (min-width: 1201px)  {
 
     .button {
-        font-size: .7rem;
+        font-size: var(--sm);
         border-radius: .4rem;
         width: 7rem;
     }
@@ -598,9 +628,13 @@ select{
     .welcome-title {
         align-items: center;
     }
+    .welcome-title h2 {
+        font-size: 25px;
+    }
 
     .welcome-title p {
-        padding-left: 10rem;
+        padding-left: 15rem;
+        font-size: var(--lg);
     }
 
     .search-box-mobile {
@@ -620,9 +654,8 @@ select{
     }
 
     .search-box button {
-        font-size: 3rem;
-        height: 3rem;
-        padding: 0 0 0 0.3rem;
+        height: 3.05rem;
+        padding: 0 0 0 0.8rem;
         border-radius: 0.3rem 0 0 0;
         border-right: none;
     }
@@ -630,7 +663,11 @@ select{
     .search-box .search-dropdown-list {
         width: 15%;
         height: 3rem;
-        font-weight: lighter;
+        font-weight: var(--font-weight-light);
+    }
+
+    .search-dropdown-list:last-child label {
+        border-top-right-radius: .3rem;
     }
 
     .search-box input {
@@ -647,23 +684,58 @@ select{
 
     .search-results-cards {
         display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        justify-content: flex-start;
         flex-wrap: wrap;
-        row-gap: 1rem;
-        margin: 0;
-        padding-left: 1rem;
+        gap: 11px;
+    }
+
+    .number-of-results {
+        font-size: var(--xl);
     }
 
     .course-card {
-        max-width: 20%;
-        height: 254px;
-        margin-left: 16px;
+        width: calc(20% - 20px);
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .course-card:nth-child(n) {
         margin-bottom: 8px;
     }
-    
+
+    .course-image-container {
+        height: 200px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        overflow: hidden;
+
+    }
+
+    .course-image {
+        height: 200px;
+        width: 100%;
+        display: block;
+    }
+
+    .course-title {
+        font-size: var(--lg);
+    }
+
+
+    .language-name {
+        font-size: var(--lg);
+    }
+
+    .rating-stars {
+        font-size: var(--lg);
+    }
+    .author {
+        font-size: var(--lg);
+    }
+
 }
 
