--- a/details/details.css
+++ b/details/details.css
@@ -12,6 +12,10 @@ li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 :root {
     --brand-primary-color: var(--brand-primary);
     --brand-secondry-color: var(--brand-secondary);
@@ -87,6 +91,7 @@ body {
     color: var(--brand-primary-color);
     font-size: var(--lg);
     font-weight: var(--font-weight-light);
+    cursor: pointer;
 }
 
 .web-controls-mobile {
@@ -146,6 +151,38 @@ body {
     color: var(--body-text-var);
     font-size: calc(1.1 * var(--sm));
     text-align: left;
+}
+
+.loading-indicator {
+    margin-top: auto;
+    text-align: center;
+    padding-top: 35px;
+}
+
+.loading-indicator h3 {
+    padding-top: 15px;
+    color: var(--body-text-var);
+}
+
+.loader {
+    border: 16px solid var(--body-text-var);
+    border-top: 16px solid var(--brand-primary);
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.error-msg {
+    font-size: 15px;
+    color: #DC143C;
+    padding-top: 20%;
+    text-align: center;
 }
 
 
@@ -274,15 +311,88 @@ table td {
     padding:20px;
 }
 
-table td::before {
-    content: "✓⃝";
-    color: green;
-    margin-right: 5px;
-    display: inline-block;
-    vertical-align: middle;
+/* Styles for the modal */
+.favorite-modal {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: flex-start;
+    z-index: 1;
 }
 
+.modal-content {
+    background-color: var(--background-default);
+    width: 100%;
+    padding: 20px;
+}
 
+.modal-content h2 {
+    font-size: 18px;
+    color: var(--body-text-var);
+    padding: 10px;
+}
+
+/* Styles for the modal */
+.favorite-modal {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: flex-start;
+    z-index: 1;
+}
+
+.modal-content {
+    background-color: var(--background-default);
+    width: 100%;
+    padding: 20px;
+}
+
+.modal-content h2 {
+    font-size: 18px;
+    color: var(--body-text-var);
+    padding: 10px;
+}
+
+.favorite-courses-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    overflow: hidden;
+    gap: 10px;
+    background-color: var(--background-default);
+}
+.favorite-course-card {
+    width: 180px;
+    height: 140px;
+    border: 1px solid var(--lines-color-var);;
+    background-color: var(--background-default);
+    border-radius: 12px;
+}
+
+.favorite-course-card-image-container {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 70px;
+    border-radius: 12px 12px 0 0;
+    overflow: hidden;
+}
+.favorite-course-image {
+    width: 100%;
+    height: auto;
+}
+
+.favorite-course-card-body h3{
+    color: var(--body-text-var);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 16px 0 5px 16px;
+}
 
 /* Small tablets and devices between 481 and 768px wide styles */
 @media screen and (min-width: 481px) and (max-width: 768px) {
